src/objects/BT_CO_PPS_RefundFileResponse__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Job_Id__c</fullName>
        <label>Batch_Job_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validation_Details__c</fullName>
        <label>Validation Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Status__c</fullName>
        <label>Validation Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>addressLine1__c</fullName>
        <label>addressLine1</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>addressLine2__c</fullName>
        <label>addressLine2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>addressLine3__c</fullName>
        <label>addressLine3</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>approvalDate__c</fullName>
        <label>approvalDate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bankAccountNumber__c</fullName>
        <label>bankAccountNumber</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bankCode__c</fullName>
        <label>bankCode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chqCutDate__c</fullName>
        <label>chqCutDate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chqNumber__c</fullName>
        <label>chqNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chqStatus__c</fullName>
        <label>chqStatus</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clearanceDate__c</fullName>
        <label>clearanceDate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clearingCountryCode__c</fullName>
        <label>clearingCountryCode</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customerACNumber__c</fullName>
        <label>customerACNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customerAccount__c</fullName>
        <label>customerAccount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customerName2__c</fullName>
        <label>customerName2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customerName__c</fullName>
        <label>customerName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>handledByWho__c</fullName>
        <label>handledByWho</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mailAddressLine1__c</fullName>
        <label>mailAddressLine1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mailAddressLine2__c</fullName>
        <label>mailAddressLine2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mailAddressLine3__c</fullName>
        <label>mailAddressLine3</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payee2__c</fullName>
        <label>payee2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payee__c</fullName>
        <label>payee</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paymentAmount2__c</fullName>
        <label>paymentAmount2</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paymentAmount__c</fullName>
        <label>paymentAmount</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telephone__c</fullName>
        <label>telephone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_PPS_RefundFileResponse</label>
    <nameField>
        <label>BT_CO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_PPS_RefundFileResponses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>